# 3D-Editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_model.ini  test_model2.ini  utils.hpp
App/: CMakeLists.txt
App/Renderer/: CMakeLists.txt
App/Renderer/inc/: FrameBuffer.hpp  IndexBuffer.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  Triangle.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp
App/Renderer/src/: Shader.cpp
App/Utils/: CMakeLists.txt
App/Utils/inc/: Logger.hpp  utils.hpp
App/Utils/src/: utils.cpp
App/assets/shaders/: basic_fragment.glsl  basic_vertex.glsl  light_fragment.glsl  light_vertex.glsl  test_fragment.glsl  test_vertex.glsl
App/inc/: App.hpp  Camera.hpp  EditorLayer.hpp  Events.hpp  ImGuiLayer.hpp  LayersSystem.hpp  RendererLayer.hpp  Window.hpp  init.hpp
App/src/: App.cpp  Camera.cpp  EditorLayer.cpp  ImGuiLayer.cpp  init.cpp
Utils/: CMakeLists.txt
Utils/src/: utils.cpp
